# aws-orchestrator-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  main.tf  pyproject.toml  uv-requirements.txt  variables.tf  versions.tf
aws_orchestrator_agent/: server.py  types.py
aws_orchestrator_agent/card/: aws_orchestrator_agent.json
aws_orchestrator_agent/config/: __init__.py  config.py  default.py
aws_orchestrator_agent/core/: __init__.py  a2a_executor.py  checkpointer.py  parts_handler.py  task_lifecycle.py
aws_orchestrator_agent/docs/: prompt_restructure_analysis.md
aws_orchestrator_agent/schemas/: __init__.py  task_lifecycle.py
aws_orchestrator_agent/utils/: __init__.py  exceptions.py  llm.py  logger.py  mcp_client.py
aws_orchestrator_client/: client.py
docs/: A2AOrchestratorFlow.md  HITL_INTEGRATION_GUIDE.md  ONBOARDING_LLM_PROVIDER.md  PLANNER_TO_GENERATOR_INPUT_SPEC.md  WRITER_REACT_AGENT_DOCUMENTATION.md  configuration_optimizer_restructure_analysis.md  parts-message-handler.md
docs/old_doc/: GENERATOR_SWARM_AGENT_DOCUMENTATION.md  PLANNER_SUB_SUPERVISOR_DOCUMENTATION.md  SUPERVISOR_TO_GENERATOR_FLOW.md  supervisor-a2a-integration.md
evals/: README.md  grade_module.py  module_quality_evals.json  run_trigger_eval.sh  trigger_queries.json
evals/files/: SKILL.md  sample_planner_state_s3.json
extra/: planner.json
memory/: AGENTS.md  failure-log.md  hitl-policies.md  learned-patterns.md  module-index.md  org-standards.md  user-preferences.md
workspace/: README.md
(+106 files in other folders)
